--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
 beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+configparser==5.0.1
+crayons==0.4.0
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
 Jinja2==2.11.2
+MarkupSafe==1.1.1
 numpy==1.19.3
+pandas==1.1.5
+PyJWT==2.0.0
 python-dateutil==2.8.1
+pytz==2020.5
 requests==2.25.1
 selenium==3.141.0
+six==1.15.0
+soupsieve==2.1
 twilio==6.50.1
 urllib3==1.26.2
 webdriver-manager==3.2.2
+Werkzeug==1.0.1
